--- a/OpenTheDamnContextMenu.csproj
+++ b/OpenTheDamnContextMenu.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{DA49CE1A-9E00-4FA2-9A23-F71ABC437C36}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>OpenTheContext</RootNamespace>
-    <AssemblyName>OpenTheContext</AssemblyName>
+    <RootNamespace>OpenTheDamnContextMenu</RootNamespace>
+    <AssemblyName>OpenTheDamnContextMenu</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Patches\OpenTheContextPatch.cs" />
+    <Compile Include="Patches\OpenTheDamnContextMenuPatch.cs" />
     <Compile Include="Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
